refactor: make youtube embed component

--- a/src/pages/features/why-privacy-is-important.mdx
+++ b/src/pages/features/why-privacy-is-important.mdx
@@ -3,6 +3,8 @@ title: "Why Privacy is Important"
 description: "An explanation of why Privacy is a fundamental human right, and why financial privacy is worth fighting for."
 ---
 
+import YouTubeEmbed from '../../components/youtube-embed'
+
 # Why Privacy is Important
 
 > It's not that I have something to hide.
@@ -16,14 +18,10 @@ The ability to keep a secret is an essential part of the human experience.
 - Why do you close the door when in the shower?
 - Why do you send your love letters only to your spouse?
 
-<iframe
+<YouTubeEmbed
   width="720"
   height="381"
-  src="https://www.youtube-nocookie.com/embed/laem7G6LPAM"
-  frameBorder="0"
-  allow="encrypted-media"
-  loading="lazy"
-  allowfullscreen
+  id="laem7G6LPAM"
 />
 
 Economic trade of goods and services is based on mutual beneficial voluntary action.
@@ -72,6 +70,7 @@ Yet individuals can use the tools of self-defense at their disposal to regain th
 
 <br />
 <br />
+
 <iframe src="https://anchor.fm/podcast-8f267c0/embed/episodes/Privacy-Matters-with-Max-Hillebrand-BEC008-e3e0qt/a-abhd5q" height="102" width="400" frameBorder="0" scrolling="no" loading="lazy"></iframe>
 
 This article is forked from [Wasabi Docs](https://docs.wasabiwallet.io/why-wasabi/WhyPrivacyImportant.html)
