--- a/src/pages/guide/android.mdx
+++ b/src/pages/guide/android.mdx
@@ -3,6 +3,8 @@ title: "How to change DNS settings on Android"
 description: "How to set DNS.SB's regular DNS on Android"
 ---
 
+import { Callout } from 'nextra-theme-docs'
+
 # How to change DNS settings on Android
 
 1. Go to `Settings` and open `Network & internet`
@@ -38,4 +40,6 @@ description: "How to set DNS.SB's regular DNS on Android"
 
 ![KZ4r.png](https://s3.image.hosting/2021/07/02/KZ4r.png)
 
-Note: If this guide doesn't work, ask your geek friend for help.
+<Callout type="warning">
+If this guide doesn't work, ask your geek friend for help.
+</Callout>
