--- a/src/pages/guide/index.mdx
+++ b/src/pages/guide/index.mdx
@@ -15,7 +15,7 @@ import { Callout } from 'nextra-theme-docs'
 - `45.11.45.11`
 
 <Callout type="warning">
-Note: The old address `185.184.222.222` will be deprecated soon.
+The old address `185.184.222.222` will be deprecated soon.
 </Callout>
 
 ### IPv6
@@ -24,7 +24,7 @@ Note: The old address `185.184.222.222` will be deprecated soon.
 - `2a11::`
 
 <Callout type="warning">
-Note: The old address `2a09::1` will be deprecated soon.
+The old address `2a09::1` will be deprecated soon.
 </Callout>
 
 You may need IPv6 with full address in some old devices:
