--- a/src/pages/guide/android.mdx
+++ b/src/pages/guide/android.mdx
@@ -7,23 +7,23 @@ import { Callout } from 'nextra-theme-docs'
 
 # How to change DNS settings on Android
 
-1. Go to `Settings` and open `Network & internet`
+1. Go to `Settings` and select `Network & internet`
 
 ![KqRI.png](https://s3.image.hosting/2021/07/02/KqRI.png)
 
-2. Open `Wi-Fi`
+2. Select `Wi-Fi`
 
 ![KUWY.png](https://s3.image.hosting/2021/07/02/KUWY.png)
 
-3. Press setting icon
+3. Click on the `setting` icon
 
 ![Khrk.png](https://s3.image.hosting/2021/07/02/Khrk.png)
 
-4. Press `Advanced`
+4. Click on `Advanced`
 
 ![Ka08.png](https://s3.image.hosting/2021/07/02/Ka08.png)
 
-5. Remember your `IP address`, `Gateway` and `Subnet mask`, then press the setting icon
+5. Remember your `IP address`, `Gateway` and `Subnet mask`, then click on the `setting` icon
 
 ![KOhH.png](https://s3.image.hosting/2021/07/02/KOhH.png)
 
@@ -31,7 +31,7 @@ import { Callout } from 'nextra-theme-docs'
 
 ![KVKV.png](https://s3.image.hosting/2021/07/02/KVKV.png)
 
-7. Input your `IP address`, `Gateway`, `Network prefix length` and DNS.SB's servers
+7. Enter your `IP address`, `Gateway`, `Network prefix length` and DNS.SB's servers
 
 ```
 185.222.222.222
