docs: prefer code blocks for easy copy

--- a/src/pages/dot/index.mdx
+++ b/src/pages/dot/index.mdx
@@ -17,7 +17,9 @@ DNS over TLS (DoT) is a security protocol for encrypting and authenticating comm
 
 ### Hostname for TLS Authentication
 
-`dot.sb`
+```
+dot.sb
+```
 
 ### TLS Port
 
@@ -25,13 +27,23 @@ DNS over TLS (DoT) is a security protocol for encrypting and authenticating comm
 
 ### IPv4
 
-- `185.222.222.222`
-- `45.11.45.11`
+```
+185.222.222.222
+```
+
+```
+45.11.45.11
+```
 
 ### IPv6
 
-- `2a09::`
-- `2a11::`
+```
+2a09::
+```
+
+```
+2a11::
+```
 
 <Callout type="warning">
 When using IPv6 address, you must use specific hostname `dot.sb`
@@ -39,8 +51,13 @@ When using IPv6 address, you must use specific hostname `dot.sb`
 
 ### IPv6 with Full Address
 
-- `2a09:0000:0000:0000:0000:0000:0000:0000`
-- `2a11:0000:0000:0000:0000:0000:0000:0000`
+```
+2a09:0000:0000:0000:0000:0000:0000:0000
+```
+
+```
+2a11:0000:0000:0000:0000:0000:0000:0000
+```
 
 ### PEM / CRT File
 
