--- a/src/pages/doh/edge.mdx
+++ b/src/pages/doh/edge.mdx
@@ -3,19 +3,23 @@ title: "How to set DNS over HTTPS on Microsoft Edge"
 description: "How to set DNS.SB's DoH (DNS over HTTPS) on Microsoft Edge"
 ---
 
+import StepContainer from '../../components/step-container'
+
 # How to set DoH on Microsoft Edge
 
 This guide is for Microsoft Edge, also works with most Chromium based browsers.
 
-## 1. Upgrade your Microsoft Edge to latest version
+<StepContainer>
+
+### Upgrade your Microsoft Edge to latest version
 
 Make sure you have installed latest Microsoft Edge, or you can download [here](https://www.microsoft.com/edge/).
 
-## 2. Go to Settings
+### Go to Settings
 
 Input `edge://settings/` in address bar and search `security` on search bar.
 
-## 3. Set DNS.SB DoH Server
+### Set DNS.SB DoH Server
 
 On `Advanced` section, enable `Use secure DNS to specify how to lookup the network address for websites`, choose `Choose a service provider` and input:
 
@@ -24,3 +28,5 @@ https://doh.dns.sb/dns-query
 ```
 
 [![KtKR.png](https://s3.image.hosting/2021/07/02/KtKR.png)](https://s3.image.hosting/2021/07/02/KtKR.png)
+
+</StepContainer>
