--- a/src/pages/dot/android.mdx
+++ b/src/pages/dot/android.mdx
@@ -3,23 +3,27 @@ title: "How to set DNS over TLS on Android"
 description: "How to set DNS.SB's DoT (DNS over TLS) on Android"
 ---
 
+import StepContainer from '../../components/step-container'
+
 # How to set DNS over TLS on Android
 
 ## Android 11+
 
-1. Go to `Settings` and open `Network & internet`
+<StepContainer>
+
+### Go to `Settings` and open `Network & internet`
 
 ![KqRI.png](https://s3.image.hosting/2021/07/02/KqRI.png)
 
-2. Press `Advanced`
+### Press `Advanced`
 
 ![K0cs.png](https://s3.image.hosting/2021/07/02/K0cs.png)
 
-3. Press `Private DNS`
+### Press `Private DNS`
 
 ![KnWv.png](https://s3.image.hosting/2021/07/02/KnWv.png)
 
-4. Select `Private DNS provider hostname` and input our hostname:
+### Select `Private DNS provider hostname` and input our hostname:
 
 ```
 dot.sb
@@ -27,7 +31,9 @@ dot.sb
 
 ![KCRS.png](https://s3.image.hosting/2021/07/02/KCRS.png)
 
-5. Press `Save`
+### Press `Save`
+
+</StepContainer>
 
 ## Use Nebulo
 
