--- a/src/pages/guide/android.mdx
+++ b/src/pages/guide/android.mdx
@@ -4,34 +4,37 @@ description: "How to set DNS.SB's regular DNS on Android"
 ---
 
 import { Callout } from 'nextra-theme-docs'
+import StepContainer from '../../components/step-container'
 
 # How to change DNS settings on Android
 
-1. Go to `Settings` and select `Network & internet`
+<StepContainer>
+
+### Go to `Settings` and select `Network & internet`
 
 ![KqRI.png](https://s3.image.hosting/2021/07/02/KqRI.png)
 
-2. Select `Wi-Fi`
+### Select `Wi-Fi`
 
 ![KUWY.png](https://s3.image.hosting/2021/07/02/KUWY.png)
 
-3. Click on the `setting` icon
+### Click on the `setting` icon
 
 ![Khrk.png](https://s3.image.hosting/2021/07/02/Khrk.png)
 
-4. Click on `Advanced`
+### Click on `Advanced`
 
 ![Ka08.png](https://s3.image.hosting/2021/07/02/Ka08.png)
 
-5. Remember your `IP address`, `Gateway` and `Subnet mask`, then click on the `setting` icon
+### Remember your `IP address`, `Gateway` and `Subnet mask`, then click on the `setting` icon
 
 ![KOhH.png](https://s3.image.hosting/2021/07/02/KOhH.png)
 
-6. Find `IP settings` and change to `Static`
+### Find `IP settings` and change to `Static`
 
 ![KVKV.png](https://s3.image.hosting/2021/07/02/KVKV.png)
 
-7. Enter your `IP address`, `Gateway`, `Network prefix length` and DNS.SB's servers
+### Enter your `IP address`, `Gateway`, `Network prefix length` and DNS.SB's servers
 
 ```
 185.222.222.222
@@ -42,6 +45,7 @@ import { Callout } from 'nextra-theme-docs'
 ```
 
 ![KZ4r.png](https://s3.image.hosting/2021/07/02/KZ4r.png)
+</StepContainer>
 
 <Callout type="warning">
 If this guide doesn't work, ask your geek friend for help.
