--- a/src/pages/guide/index.mdx
+++ b/src/pages/guide/index.mdx
@@ -59,6 +59,7 @@ You may need IPv6 with full address in some old devices:
 - [Mozilla Firefox](/doh/firefox/)
 - [Google Chrome](/doh/chrome/)
 - [Microsoft Edge](/doh/edge/)
+- [Vivaldi Browser](/doh/vivaldi/)
 - [Windows](/doh/windows/)
 - [Linux](/doh/linux/)
 - [Android](/doh/android/)
