--- a/src/pages/guide/ios.mdx
+++ b/src/pages/guide/ios.mdx
@@ -3,21 +3,25 @@ title: "How to change DNS settings on iOS"
 description: "How to set DNS.SB's regular DNS on iPhone or iPad"
 ---
 
+import StepContainer from '../../components/step-container'
+
 # How to change DNS settings on iOS
 
-1. Go to `Settings` and select `Wi-Fi`
+<StepContainer>
+
+### Go to `Settings` and select `Wi-Fi`
 
 ![5k0i.png](https://s3.image.hosting/2021/07/02/5k0i.png)
 
-2. Click on the `i` button on right of your connected Wi-Fi
+### Click on the `i` button on right of your connected Wi-Fi
 
 ![5w3l.png](https://s3.image.hosting/2021/07/02/5w3l.png)
 
-3. Scroll down and find `Configure DNS`
+### Scroll down and find `Configure DNS`
 
 ![KBrK.png](https://s3.image.hosting/2021/07/02/KBrK.png)
 
-4. Select `Manual`, remove old DNS servers and then add DNS.SB's servers
+### Select `Manual`, remove old DNS servers and then add DNS.SB's servers
 
 ```
 185.222.222.222
@@ -37,4 +41,6 @@ description: "How to set DNS.SB's regular DNS on iPhone or iPad"
 
 ![KYhU.png](https://s3.image.hosting/2021/07/02/KYhU.png)
 
-5. Click on `Save`
+### Click on `Save`
+
+</StepContainer>
