--- a/src/pages/guide/macos.mdx
+++ b/src/pages/guide/macos.mdx
@@ -3,15 +3,19 @@ title: "How to change DNS settings on macOS"
 description: "How to set DNS.SB's regular DNS on Apple macOS"
 ---
 
+import StepContainer from '../../components/step-container'
+
 # How to change DNS settings on macOS
 
-1. Go to `System Settings` and find `Network`
+<StepContainer>
+
+### Go to `System Settings` and find `Network`
 
 ![WjEGY.png](https://s3.image.hosting/2023/01/11/WjEGY.png)
 
 If you are on Wi-Fi, select `Wi-Fi` and if you are on Ethernet, select `Ethernet`.
 
-2. When you are on Ethernet, click on `Details...` button, and select `DNS`:
+### When you are on Ethernet, click on `Details...` button, and select `DNS`:
 
 Delete the old records add DNS.SB's servers
 
@@ -33,7 +37,7 @@ Delete the old records add DNS.SB's servers
 
 [![Wjcd8.png](https://s3.image.hosting/2023/01/11/Wjcd8.png)](https://image.hosting/image/Wjcd8)
 
-3. When you are on Wi-Fi, click on `Details...` button from the connected network, and select `DNS`:
+### When you are on Wi-Fi, click on `Details...` button from the connected network, and select `DNS`:
 
 Delete the old records add DNS.SB's servers
 
@@ -53,4 +57,6 @@ Delete the old records add DNS.SB's servers
 2a11::
 ```
 
-4. Finally, Click on the `OK` button
+### Finally, Click on the `OK` button
+
+</StepContainer>
