--- a/src/pages/doh/chrome.mdx
+++ b/src/pages/doh/chrome.mdx
@@ -3,21 +3,25 @@ title: "How to set DNS over HTTPS on Google Chrome"
 description: "How to set DNS.SB's DoH (DNS over HTTPS) on Chrome"
 ---
 
+import StepContainer from '../../components/step-container'
+
 # How to set DoH on Chrome
 
 This guide is for Google Chrome, also works with most Chromium based browsers.
 
-## 1. Upgrade your Chrome to latest version
+<StepContainer>
+
+### Upgrade your Chrome to latest version
 
 Make sure you have installed latest Chrome, or you can download [here](https://www.google.com/chrome/).
 
-## 2. Go to Settings
+### Go to Settings
 
 Input `chrome://settings/` in address bar and search `security` on search bar, then click `Security`
 
 [![Kjyj.png](https://s3.image.hosting/2021/07/02/Kjyj.png)](https://s3.image.hosting/2021/07/02/Kjyj.png)
 
-## 3. Set DNS.SB DoH Server
+### Set DNS.SB DoH Server
 
 On `Advanced` section, enable `Use secure DNS`, choose `with Custom` and input:
 
@@ -26,3 +30,5 @@ https://doh.dns.sb/dns-query
 ```
 
 [![K6ip.png](https://s3.image.hosting/2021/07/02/K6ip.png)](https://s3.image.hosting/2021/07/02/K6ip.png)
+
+</StepContainer>
