--- a/src/pages/doh/firefox.mdx
+++ b/src/pages/doh/firefox.mdx
@@ -3,19 +3,23 @@ title: "How to set DNS over HTTPS on Mozilla Firefox"
 description: "How to set DNS.SB's DoH (DNS over HTTPS) on Firefox"
 ---
 
+import StepContainer from '../../components/step-container'
+
 # How to set DoH on Firefox
 
-## 1. Upgrade your Firefox to latest version
+<StepContainer>
+
+### Upgrade your Firefox to latest version
 
 Make sure you have installed latest Firefox, or you can download [here](https://www.mozilla.org/en-US/firefox/all/).
 
-## 2. Go to Settings
+### Go to Settings
 
 Input `about:preferences` in address bar and search `network` on search bar, then click `Settings...`
 
 ![KI7q.png](https://s3.image.hosting/2021/07/02/KI7q.png)
 
-## 3. Set DNS.SB DoH Server
+### Set DNS.SB DoH Server
 
 On `Connection Settings` page, click `Enable DNS over HTTPS`, choose `Custom` on `Use Provider`, and input the following on `Custom`:
 
@@ -24,3 +28,5 @@ https://doh.dns.sb/dns-query
 ```
 
 ![KTHP.png](https://s3.image.hosting/2021/07/02/KTHP.png)
+
+</StepContainer>
