--- a/src/pages/dot/windows.mdx
+++ b/src/pages/dot/windows.mdx
@@ -1,19 +1,25 @@
 ---
-title: "How to set DNS over TLS on Windows with YogaDNS"
+title: "How to set DNS over TLS on Windows"
 description: "How to set DNS.SB's DoT (DNS over TLS) on Windows with YogaDNS"
 ---
 
-# How to set DoT on Windows with YogaDNS
+import StepContainer from '../../components/step-container'
 
-## 1. Download YogaDNS
+# How to set DNS over TLS on Windows
+
+## Set DoT on Windows with YogaDNS
+
+<StepContainer>
+
+### Download YogaDNS
 
 You can download and install the latest version [here](https://yogadns.com/download/).
 
-## 2. Set an empty configuration
+### Start with an empty configuration
 
 [![KvND.png](https://s3.image.hosting/2021/07/02/KvND.png)](https://s3.image.hosting/2021/07/02/KvND.png)
 
-## 3. Set DNS.SB DoT Server
+### Set DNS.SB DoT Server
 
 Click `DNS Servers`, then click `Add...`
 
@@ -34,3 +40,5 @@ dot.sb
 [![Ks9g.png](https://s3.image.hosting/2021/07/02/Ks9g.png)](https://s3.image.hosting/2021/07/02/Ks9g.png)
 
 Click `OK`
+
+</StepContainer>
