--- a/src/pages/doh/linux.mdx
+++ b/src/pages/doh/linux.mdx
@@ -122,7 +122,7 @@ sudo systemctl daemon-reload
 sudo systemctl enable --now dnsproxy
 ```
 
-### Edit `/etc/resolv.conf``
+### Edit `/etc/resolv.conf`
 
 We can use the same method like [How to change DNS settings on Linux](/guide/linux/), open `/etc/resolv.conf`
 
