Update new cert
Now we support `https://[2a09::]/dns-query` and `https://[2a11::]/dns-query`

--- a/src/pages/dot/linux.mdx
+++ b/src/pages/dot/linux.mdx
@@ -30,7 +30,7 @@ Here's an example config:
 
 ```bash filename="/etc/systemd/resolved.conf"
 [Resolve]
-DNS=185.222.222.222 45.11.45.11 2a09::#dot.sb 2a11::#dot.sb
+DNS=185.222.222.222 45.11.45.11 2a09:: 2a11::
 DNSOverTLS=yes
 DNSSEC=yes
 ```
