Update DNS over HTTPS guide

--- a/src/pages/doh/chrome.mdx
+++ b/src/pages/doh/chrome.mdx
@@ -17,18 +17,16 @@ Make sure you have installed latest Chrome, or you can download [here](https://w
 
 ### Go to Settings
 
-Input `chrome://settings/` in address bar and search `security` on search bar, then click `Security`
-
-[![Kjyj.png](https://s3.image.hosting/2021/07/02/Kjyj.png)](https://s3.image.hosting/2021/07/02/Kjyj.png)
+Input `chrome://settings/security` in address bar.
 
 ### Set DNS.SB DoH Server
 
-On `Advanced` section, enable `Use secure DNS`, choose `with Custom` and input:
+On `Advanced` section, enable `Use secure DNS`, choose `Add custom DNS service provider` and input:
 
 ```
 https://doh.dns.sb/dns-query
 ```
 
-[![K6ip.png](https://s3.image.hosting/2021/07/02/K6ip.png)](https://s3.image.hosting/2021/07/02/K6ip.png)
+![image](https://s3.image.hosting/2025/07/09/pmW0XS.png)
 
 </StepContainer>
