--- a/src/pages/doh/edge.mdx
+++ b/src/pages/doh/edge.mdx
@@ -17,16 +17,16 @@ Make sure you have installed latest Microsoft Edge, or you can download [here](h
 
 ### Go to Settings
 
-Input `edge://settings/` in address bar and search `security` on search bar.
+Input `edge://settings/privacy/security` in address bar.
 
 ### Set DNS.SB DoH Server
 
-On `Advanced` section, enable `Use secure DNS to specify how to lookup the network address for websites`, choose `Choose a service provider` and input:
+On `Use secure DNS` section, enable it, choose `Choose a service provider` and input:
 
 ```
 https://doh.dns.sb/dns-query
 ```
 
-[![KtKR.png](https://s3.image.hosting/2021/07/02/KtKR.png)](https://s3.image.hosting/2021/07/02/KtKR.png)
+![image](https://s3.image.hosting/2025/07/09/pmW7Qv.png)
 
 </StepContainer>
