--- a/src/pages/doh/firefox.mdx
+++ b/src/pages/doh/firefox.mdx
@@ -15,18 +15,17 @@ Make sure you have installed latest Firefox, or you can download [here](https://
 
 ### Go to Settings
 
-Input `about:preferences` in address bar and search `network` on search bar, then click `Settings...`
+Input `about:preferences` in address bar and search `DNS over HTTPS` on search bar.
 
-![KI7q.png](https://s3.image.hosting/2021/07/02/KI7q.png)
 
 ### Set DNS.SB DoH Server
 
-On `Connection Settings` page, click `Enable DNS over HTTPS`, choose `Custom` on `Use Provider`, and input the following on `Custom`:
+On `Enable DNS over HTTPS using` page, choose `Increased Protection`, choose provider as `Custom`, and input:
 
 ```
 https://doh.dns.sb/dns-query
 ```
 
-![KTHP.png](https://s3.image.hosting/2021/07/02/KTHP.png)
+![image](https://s3.image.hosting/2025/07/09/pmWDVq.png)
 
 </StepContainer>
