--- a/src/pages/doh/vivaldi.mdx
+++ b/src/pages/doh/vivaldi.mdx
@@ -15,16 +15,16 @@ Make sure you have installed latest Vivaldi, or you can download [here](https://
 
 ### Go to Settings
 
-Input `chrome://settings/security` in address bar, it will automatic redirect to `vivaldi://settings/security`, however, you can't use this URL directly.
+Input `vivaldi:settings/network/` in address bar or use `ctrl` + `F12` to open settings page.
 
 ### Set DNS.SB DoH Server
 
-On `Advanced` section, enable `Use secure DNS`, choose `with Custom` and input:
+On `Network` section, or you can search `DNS Over HTTPS`, then enable `DNS Over HTTPS`, choose `Custom DNS Provider` and input:
 
 ```
 https://doh.dns.sb/dns-query
 ```
 
-![W2xcg.png](https://s3.image.hosting/2023/01/20/W2xcg.png)
+![Vivaldi](https://s3.image.hosting/2025/07/09/pmWgDf.png)
 
 </StepContainer>
